--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,9 @@ jobs:
           # x86_64-specific code is also tested on Linux using multiple versions.
           - rust: nightly
             target: x86_64-apple-darwin
+            os: macos-15-intel
+          - rust: nightly
+            target: x86_64-apple-darwin
             os: macos-latest # Rosetta on AArch64
           # ------------------------------------------------------------
           # x86_64-pc-windows-msvc
