--- a/.github/zizmor.yml
+++ b/.github/zizmor.yml
@@ -2,7 +2,7 @@
 # https://docs.zizmor.sh/configuration/
 
 rules:
-  dependabot-cooldown: { disable: true } # Useless unless unpinned-uses is enabled.
+  dependabot-cooldown: { disable: true } # Useless unless hash-pin is forced by unpinned-uses.
   ref-confusion: { disable: true } # TODO: Old GHA didn't work without this pattern in some cases, but does it seem to be fixed?
   secrets-inherit: { disable: true }
   unpinned-uses:
