--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -907,7 +907,7 @@ jobs:
     runs-on: ${{ matrix.os || 'ubuntu-latest' }}
     timeout-minutes: 60
     container:
-      image: ghcr.io/taiki-e/valgrind:ubuntu-devel-${{ matrix.dpkg-arch }}
+      image: ghcr.io/taiki-e/valgrind:${{ matrix.dpkg-arch }}
       options: --privileged
     steps:
       - uses: taiki-e/checkout-action@v1
@@ -961,11 +961,17 @@ jobs:
           RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg atomic_maybe_uninit_test_prefer_x87_over_sse --cfg atomic_maybe_uninit_test_prefer_cmpxchg8b_over_x87
         if: startsWith(matrix.target, 'i686')
       # aarch64 +lse
-      # As of Valgrind 3.19, Valgrind supports atomic instructions of Armv8.0 and Armv8.1 (FEAT_LSE).
+      # As of Valgrind 3.26, Valgrind supports atomic instructions of Armv8.0, Armv8.1 (FEAT_LSE), and Armv8.3 (FEAT_LRCPC).
       - run: tools/test.sh valgrind -vv ${TARGET:-}
         env:
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+lse
           RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+lse
+        if: startsWith(matrix.target, 'aarch64')
+      # aarch64 +rcpc,+lse
+      - run: tools/test.sh valgrind -vv ${TARGET:-}
+        env:
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+rcpc,+lse
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+rcpc,+lse
         if: startsWith(matrix.target, 'aarch64')
       # arm v8 little endian
       - run: tools/test.sh valgrind -vv ${TARGET:-}
@@ -1010,7 +1016,6 @@ jobs:
             docker-arch: ppc64le
           - target: riscv64gc-unknown-linux-gnu
             dpkg-arch: riscv64
-            distro: ubuntu-25.04 # TODO: "unhandled instruction 0x0C0777D7" error on Ubuntu 25.10 (likely due to RVA23U64 extensions are now enabled)
           - target: s390x-unknown-linux-gnu
             dpkg-arch: s390x
     runs-on: ubuntu-latest
@@ -1095,7 +1100,7 @@ jobs:
         with:
           arch: none
           distro: none
-          base_image: --platform=linux/${{ matrix.docker-arch || matrix.dpkg-arch }} ghcr.io/taiki-e/valgrind:${{ matrix.distro || 'ubuntu-devel' }}-${{ matrix.dpkg-arch }}-cross
+          base_image: --platform=linux/${{ matrix.docker-arch || matrix.dpkg-arch }} ghcr.io/taiki-e/valgrind:${{ matrix.dpkg-arch }}-cross
           shell: /bin/bash
           run: |
             set -CeEuxo pipefail
