--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -813,6 +813,10 @@ jobs:
         if: matrix.rust == 'stable'
       - uses: taiki-e/install-action@espup
         if: matrix.rust == 'stable'
+      - uses: taiki-e/cache-cargo-install-action@v2
+        with:
+          tool: bpf-linker
+        if: matrix.rust == 'nightly'
       - run: |
           retry() {
             for i in {1..10}; do
