tests/asm-test: Add avr_rmw and x86_64_cmpxchg16b_avx_x32 cases

--- a/tests/asm-test/Cargo.toml
+++ b/tests/asm-test/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "asm-test"
-version = "0.0.0"
 edition = "2021"
-rust-version = "1.74" # Prevent clippy from suggesting a code that requires a new version.
-publish = false
+
+[lib]
+doc = false
+doctest = false
 
 [features]
 core = []
