--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1012,12 +1012,11 @@ jobs:
       matrix:
         include:
           - target: powerpc64le-unknown-linux-gnu
-            dpkg-arch: ppc64el
-            docker-arch: ppc64le
+            arch: ppc64le
           - target: riscv64gc-unknown-linux-gnu
-            dpkg-arch: riscv64
+            arch: riscv64
           - target: s390x-unknown-linux-gnu
-            dpkg-arch: s390x
+            arch: s390x
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
@@ -1077,7 +1076,7 @@ jobs:
         with:
           arch: none
           distro: none
-          base_image: --platform=linux/${{ matrix.docker-arch || matrix.dpkg-arch }} ghcr.io/taiki-e/valgrind:${{ matrix.dpkg-arch }}-cross
+          base_image: --platform=linux/${{ matrix.arch }} ghcr.io/taiki-e/valgrind:${{ matrix.arch }}-cross
           shell: /bin/bash
           run: |
             set -CeEuxo pipefail
