--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -824,16 +824,13 @@ jobs:
             done
             "$@"
           }
-          apt_packages=(
-            qemu-system-arm
-            qemu-system-misc
-          )
           if [[ "${{ matrix.rust }}" == "nightly"* ]]; then
-            apt_packages+=(
+            apt_packages=(
               avr-libc
               gcc-avr
               gcc-m68k-linux-gnu
               libc6-dev-m68k-cross
+              # TODO: QEMU 10.2 exits with 1
               qemu-system-sparc
               simavr
             )
@@ -843,16 +840,9 @@ jobs:
                 mspdebug
               )
             fi
+            retry sudo apt-get -o Acquire::Retries=10 -qq update
+            retry sudo apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends "${apt_packages[@]}"
           fi
-          retry sudo apt-get -o Acquire::Retries=10 -qq update
-          retry sudo apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends "${apt_packages[@]}"
-          # APT's qemu package doesn't provide firmware for riscv32: https://packages.ubuntu.com/en/jammy/all/qemu-system-data/filelist
-          opensbi_version=1.8 # https://github.com/riscv-software-src/opensbi/releases
-          retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused "https://github.com/riscv-software-src/opensbi/releases/download/v${opensbi_version}/opensbi-${opensbi_version}-rv-bin.tar.xz" \
-            | tar xJf -
-          sudo mv -- "opensbi-${opensbi_version}-rv-bin/share/opensbi/ilp32/generic/firmware/fw_dynamic.bin" /usr/share/qemu/opensbi-riscv32-generic-fw_dynamic.bin
-          sudo mv -- "opensbi-${opensbi_version}-rv-bin/share/opensbi/ilp32/generic/firmware/fw_dynamic.elf" /usr/share/qemu/opensbi-riscv32-generic-fw_dynamic.elf
-          rm -rf -- "opensbi-${opensbi_version}-rv-bin"
           if [[ "${{ matrix.rust }}" == "nightly"* ]]; then
             if [[ "${{ matrix.rust }}" != "nightly-2023-08-24" ]]; then
               mkdir -p -- "${HOME}"/{msp430-gcc,sparc-bcc-gcc,tsim}
@@ -876,11 +866,19 @@ jobs:
             mkdir -p -- qemu-user
             docker cp -- qemu-user:/usr/bin qemu-user/bin
             docker rm -f -- qemu-user >/dev/null
-            sudo mv -- qemu-user/bin/qemu-* /usr/bin/
+            sudo mv -- qemu-user/bin/qemu-* /usr/local/bin/
             rm -rf -- ./qemu-user
           elif [[ "${{ matrix.rust }}" == "stable" ]]; then
             retry espup install --targets esp32,esp32s2,esp32s3
           fi
+          # https://github.com/taiki-e/dockerfiles/pkgs/container/qemu-system
+          retry docker create --name qemu-system ghcr.io/taiki-e/qemu-system
+          mkdir -p -- qemu-system
+          docker cp -- qemu-system:/qemu qemu-system/qemu
+          docker rm -f -- qemu-system >/dev/null
+          rm -- qemu-system/qemu/bin/qemu-system-sparc # TODO: QEMU 10.2 exits with 1
+          sudo cp -r -- qemu-system/qemu/. /usr/local/
+          rm -rf -- ./qemu-system
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: rm -- tests/avr/rust-toolchain.toml
