--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -492,7 +492,7 @@ jobs:
     needs: tidy
     name: valgrind (${{ matrix.target }})
     env:
-      VALGRIND_INCLUDE: /usr/include/valgrind
+      VALGRIND_INCLUDE: /usr/include
     strategy:
       fail-fast: false
       matrix:
