--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -432,21 +432,21 @@ jobs:
             if [[ "${{ matrix.rust }}" != "nightly-2023-08-24" ]]; then
               mkdir -p -- "${HOME}"/{msp430-gcc,sparc-bcc-gcc,tsim}
               # https://www.ti.com/tool/MSP430-GCC-OPENSOURCE
-              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused https://dr-download.ti.com/software-development/ide-configuration-compiler-or-debugger/MD-LlCjWuAbzH/9.3.1.2/msp430-gcc-9.3.1.11_linux64.tar.bz2 \
+              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-all-errors https://dr-download.ti.com/software-development/ide-configuration-compiler-or-debugger/MD-LlCjWuAbzH/9.3.1.2/msp430-gcc-9.3.1.11_linux64.tar.bz2 \
                 | tar xjf - --strip-components 1 -C "${HOME}"/msp430-gcc
               printf '%s\n' "${HOME}"/msp430-gcc/bin >>"${GITHUB_PATH}"
               # https://download.gaisler.com/anonftp/bcc2/bin/
               bcc_version=2.3.1
-              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused "https://download.gaisler.com/anonftp/bcc2/bin/bcc-${bcc_version}-gcc-sparc-linux64.tar.xz" \
+              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-all-errors "https://download.gaisler.com/anonftp/bcc2/bin/bcc-${bcc_version}-gcc-sparc-linux64.tar.xz" \
                 | tar xJf - --strip-components 1 -C "${HOME}"/sparc-bcc-gcc
               printf '%s\n' "${HOME}"/sparc-bcc-gcc/bin >>"${GITHUB_PATH}"
               # https://www.gaisler.com/products/tsim3
               tsim3_version=3.1.13
-              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused "https://download.gaisler.com/products/TSIM3/bin/tsim-eval/tsim-eval-${tsim3_version}.tar.gz" \
+              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-all-errors "https://download.gaisler.com/products/TSIM3/bin/tsim-eval/tsim-eval-${tsim3_version}.tar.gz" \
                 | tar xzf - --strip-components 1 -C "${HOME}"/tsim
               printf '%s\n' "${HOME}"/tsim/tsim/linux-x64 >>"${GITHUB_PATH}"
               # Patched QEMU 10.1.3 for LoongArch
-              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused https://github.com/taiki-e/qemu/releases/download/loongarch-semi-10.1.3/qemu-ubuntu-24.04.tar.xz \
+              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-all-errors https://github.com/taiki-e/qemu/releases/download/loongarch-semi-10.1.3/qemu-ubuntu-24.04.tar.xz \
                 | tar xJf -
               sudo mv -- qemu /usr/local/qemu-loongarch-semi
               /usr/local/qemu-loongarch-semi/bin/qemu-system-loongarch64 --version
@@ -460,7 +460,7 @@ jobs:
             sudo mv -- qemu-user/bin/qemu-* /usr/local/bin/
             rm -rf -- ./qemu-user
           elif [[ "${{ matrix.rust }}" == "stable" ]]; then
-            # Use the latest toolchain once upstream bug fixed.
+            # TODO: Use the latest toolchain once upstream bug fixed.
             retry espup install --targets esp32,esp32s2,esp32s3 --toolchain-version 1.90.0
           fi
           # https://github.com/taiki-e/dockerfiles/pkgs/container/qemu-system
@@ -714,7 +714,7 @@ jobs:
             done
             "$@"
           }
-          # Use the latest toolchain once upstream bug fixed.
+          # TODO: Use the latest toolchain once upstream bug fixed.
           retry espup install --targets esp32 --toolchain-version 1.90.0
       - run: cargo test --manifest-path tests/asm-test/Cargo.toml
       - run: cargo +esp test --manifest-path tests/asm-test/Cargo.toml
